H/csound.h

  
  typedef struct {
    char    *devName;
    int     devNum;
    int     bufSamp_SW;
    int     bufSamp_HW;
    int     nChannels;
    int     sampleFormat;
    float   sampleRate;
  } csRtAudioParams;
  typedef struct RTCLOCK_S {
    int_least64_t   starttime_real;
    int_least64_t   starttime_CPU;
  } RTCLOCK;
  typedef struct {
    char        *opname;
    char        *outypes;
    char        *intypes;
  } opcodeListEntry;
  typedef struct CSOUND_  CSOUND;
  typedef struct windat_  WINDAT;
  typedef struct xyindat_ XYINDAT;
  PUBLIC void csoundSetCscoreCallback(CSOUND *,
                                      void (*cscoreCallback_)(CSOUND *));
  PUBLIC void csoundSetMessageCallback(CSOUND *,
                            void (*csoundMessageCallback_)(CSOUND *,
                                                           int attr,
                                                           const char *format,
                                                           va_list valist));
  PUBLIC int csoundGetMessageLevel(CSOUND *);
  PUBLIC void csoundSetMessageLevel(CSOUND *, int messageLevel);
  PUBLIC void csoundInputMessage(CSOUND *, const char *message);
  PUBLIC void csoundKeyPress(CSOUND *, char c);
  PUBLIC void csoundSetInputValueCallback(CSOUND *,
                            void (*inputValueCalback_)(CSOUND *,
                                                       const char *channelName,
                                                       MYFLT *value));
  PUBLIC void csoundSetOutputValueCallback(CSOUND *,
                            void (*outputValueCalback_)(CSOUND *,
                                                        const char *channelName,
                                                        MYFLT value));
  PUBLIC int csoundScoreEvent(CSOUND *,
                              char type, const MYFLT *pFields, long numFields);
  PUBLIC void csoundSetExternalMidiInOpenCallback(CSOUND *,
            int (*func)(CSOUND *, void **userData, const char *devName));
  PUBLIC void csoundSetExternalMidiReadCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData,
                                  unsigned char *buf, int nBytes));
  PUBLIC void csoundSetExternalMidiInCloseCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData));
  PUBLIC void csoundSetExternalMidiOutOpenCallback(CSOUND *,
            int (*func)(CSOUND *, void **userData, const char *devName));
  PUBLIC void csoundSetExternalMidiWriteCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData,
                                  const unsigned char *buf, int nBytes));
  PUBLIC void csoundSetExternalMidiOutCloseCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData));
  PUBLIC void csoundSetExternalMidiErrorStringCallback(CSOUND *,
            const char *(*func)(int));
  PUBLIC int csoundSetIsGraphable(CSOUND *, int isGraphable);
  PUBLIC void csoundSetMakeGraphCallback(CSOUND *,
                            void (*makeGraphCallback_)(CSOUND *,
                                                       WINDAT *windat,
                                                       const char *name));
  PUBLIC void csoundSetDrawGraphCallback(CSOUND *,
                            void (*drawGraphCallback_)(CSOUND *,
                                                       WINDAT *windat));
  PUBLIC void csoundSetKillGraphCallback(CSOUND *,
                            void (*killGraphCallback_)(CSOUND *,
                                                       WINDAT *windat));
  PUBLIC void csoundSetMakeXYinCallback(CSOUND *,
                            void (*makeXYinCallback_)(CSOUND *, XYINDAT *,
                                                      MYFLT x, MYFLT y));
  PUBLIC void csoundSetReadXYinCallback(CSOUND *,
                            void (*readXYinCallback_)(CSOUND *, XYINDAT *));
  PUBLIC void csoundSetKillXYinCallback(CSOUND *,
                            void (*killXYinCallback_)(CSOUND *, XYINDAT *));
  PUBLIC void csoundSetExitGraphCallback(CSOUND *,
                            int (*exitGraphCallback_)(CSOUND *));
  PUBLIC int csoundNewOpcodeList(CSOUND *, opcodeListEntry **opcodelist);
  PUBLIC void csoundDisposeOpcodeList(CSOUND *, opcodeListEntry *opcodelist);
  PUBLIC int csoundAppendOpcode(CSOUND *, const char *opname,
                                int dsblksiz, int thread,
                                const char *outypes, const char *intypes,
                                int (*iopadr)(CSOUND *, void *),
                                int (*kopadr)(CSOUND *, void *),
                                int (*aopadr)(CSOUND *, void *));
  PUBLIC int csoundOpenLibrary(void **library, const char *libraryPath);
  PUBLIC int csoundCloseLibrary(void *library);
  PUBLIC void *csoundGetLibrarySymbol(void *library, const char *symbolName);
  PUBLIC void csoundSetYieldCallback(CSOUND *, int (*yieldCallback_)(CSOUND *));
  PUBLIC void csoundSetPlayopenCallback(CSOUND *,
                            int (*playopen__)(CSOUND *,
                                              const csRtAudioParams *parm));
  PUBLIC void csoundSetRtplayCallback(CSOUND *,
                            void (*rtplay__)(CSOUND *,
                                             const MYFLT *outBuf, int nbytes));
  PUBLIC void csoundSetRecopenCallback(CSOUND *,
                            int (*recopen_)(CSOUND *,
                                            const csRtAudioParams *parm));
  PUBLIC void csoundSetRtrecordCallback(CSOUND *,
                            int (*rtrecord__)(CSOUND *,
                                              MYFLT *inBuf, int nbytes));
  PUBLIC void csoundSetRtcloseCallback(CSOUND *, void (*rtclose__)(CSOUND *));
  PUBLIC int csoundGetDebug(CSOUND *);
  PUBLIC void csoundSetDebug(CSOUND *, int debug);
  PUBLIC int csoundTableLength(CSOUND *, int table);
  PUBLIC MYFLT csoundTableGet(CSOUND *, int table, int index);
  PUBLIC void csoundTableSet(CSOUND *, int table, int index, MYFLT value);
  PUBLIC int csoundGetTable(CSOUND *, MYFLT **tablePtr, int tableNum);
  PUBLIC void *csoundCreateThread(uintptr_t (*threadRoutine)(void *),
                                  void *userdata);
  PUBLIC uintptr_t csoundJoinThread(void *thread);
  PUBLIC void *csoundCreateThreadLock(void);
  PUBLIC int csoundWaitThreadLock(void *lock, size_t milliseconds);
  PUBLIC void csoundWaitThreadLockNoTimeout(void *lock);
  PUBLIC void csoundNotifyThreadLock(void *lock);
  PUBLIC void csoundDestroyThreadLock(void *lock);
  PUBLIC void csoundSleep(size_t milliseconds);
  PUBLIC void csoundInitTimerStruct(RTCLOCK *);
  PUBLIC double csoundGetRealTime(RTCLOCK *);
  PUBLIC double csoundGetCPUTime(RTCLOCK *);
  PUBLIC uint32_t csoundGetRandomSeedFromTime(void);
  PUBLIC void csoundSetLanguage(cslanguage_t lang_code);
  PUBLIC char *csoundLocalizeString(const char *s);
  PUBLIC int csoundCreateGlobalVariable(CSOUND *,
                                        const char *name, size_t nbytes);
  PUBLIC void *csoundQueryGlobalVariable(CSOUND *, const char *name);
  PUBLIC void *csoundQueryGlobalVariableNoCheck(CSOUND *, const char *name);
  PUBLIC int csoundDestroyGlobalVariable(CSOUND *, const char *name);
  PUBLIC int csoundGetSizeOfMYFLT(void);
  PUBLIC int csoundRegisterSenseEventCallback(CSOUND *,
                                              void (*func)(CSOUND *, void *),
                                              void *userData);