interfaces/csound5.lisp

       (cffi:defcfun ("csoundGetSizeOfMYFLT" csound-get-size-of-myflt) :int)
       (cffi:defcfun ("csoundDestroyGlobalVariable"
                      csound-destroy-global-variable-1)
                     :int
                     (anonymous4701 :pointer)
                     (name :pointer))
       (cffi:defcfun ("csoundQueryGlobalVariableNoCheck"
                      csound-query-global-variable-no-check-1)
                     :pointer
                     (anonymous4702 :pointer)
                     (name :pointer))
       (cffi:defcfun ("csoundQueryGlobalVariable"
                      csound-query-global-variable-1)
                     :pointer
                     (anonymous4703 :pointer)
                     (name :pointer))
       (cffi:defcfun ("csoundCreateGlobalVariable"
                      csound-create-global-variable-1)
                     :int
                     (anonymous4704 :pointer)
                     (name :pointer)
                     (nbytes size-t))
       (cffi:defcfun ("csoundLocalizeString" csound-localize-string)
                     :pointer
                     (s :pointer))
       (cffi:defcfun ("csoundSetLanguage" csound-set-language)
                     :void
                     (lang-code cslanguage-t))
       (cffi:defcfun ("csoundGetRandomSeedFromTime"
                      csound-get-random-seed-from-time)
                     uint32-t)
       (cffi:defcfun ("csoundGetCPUTime" csound-get-cputime)
                     :double
                     (anonymous4705 :pointer))
       (cffi:defcfun ("csoundGetRealTime" csound-get-real-time)
                     :double
                     (anonymous4706 :pointer))
       (cffi:defcfun ("csoundInitTimerStruct" csound-init-timer-struct)
                     :void
                     (anonymous4707 :pointer))
       (cffi:defcfun ("csoundSleep" csound-sleep) :void (milliseconds size-t))
       (cffi:defcfun ("csoundDestroyThreadLock" csound-destroy-thread-lock)
                     :void
                     (lock :pointer))
       (cffi:defcfun ("csoundNotifyThreadLock" csound-notify-thread-lock)
                     :void
                     (lock :pointer))
       (cffi:defcfun ("csoundWaitThreadLockNoTimeout"
                      csound-wait-thread-lock-no-timeout)
                     :void
                     (lock :pointer))
       (cffi:defcfun ("csoundWaitThreadLock" csound-wait-thread-lock)
                     :int
                     (lock :pointer)
                     (milliseconds size-t))
       (cffi:defcfun ("csoundCreateThreadLock" csound-create-thread-lock)
                     :pointer)
       (cffi:defcfun ("csoundJoinThread" csound-join-thread)
                     uintptr-t
                     (thread :pointer))
       (cffi:defcfun ("csoundCreateThread" csound-create-thread)
                     :pointer
                     (thread-routine :pointer)
                     (userdata :pointer))
       (cffi:defcfun ("csoundGetTable" csound-get-table-1)
                     :pointer
                     (anonymous4709 :pointer)
                     (table-num :int)
                     (table-length :pointer))
       (cffi:defcfun ("csoundTableSet" csound-table-set-1)
                     :void
                     (anonymous4710 :pointer)
                     (table :int)
                     (index :int)
                     (value :float))
       (cffi:defcfun ("csoundTableGet" csound-table-get-1)
                     :float
                     (anonymous4711 :pointer)
                     (table :int)
                     (index :int))
       (cffi:defcfun ("csoundTableLength" csound-table-length-1)
                     :int
                     (anonymous4712 :pointer)
                     (table :int))
       (cffi:defcfun ("csoundSetDebug" csound-set-debug-1)
                     :void
                     (anonymous4713 :pointer)
                     (debug :int))
       (cffi:defcfun ("csoundGetDebug" csound-get-debug-1)
                     :int
                     (anonymous4714 :pointer))
       (cffi:defcfun ("csoundSetRtcloseCallback" csound-set-rtclose-callback-1)
                     :void
                     (anonymous4715 :pointer)
                     (rtclose-- :pointer))
       (cffi:defcfun ("csoundSetRtrecordCallback"
                      csound-set-rtrecord-callback-1)
                     :void
                     (anonymous4716 :pointer)
                     (rtrecord-- :pointer))
       (cffi:defcfun ("csoundSetRecopenCallback" csound-set-recopen-callback-1)
                     :void
                     (anonymous4717 :pointer)
                     (recopen- :pointer))
       (cffi:defcfun ("csoundSetRtplayCallback" csound-set-rtplay-callback-1)
                     :void
                     (anonymous4718 :pointer)
                     (rtplay-- :pointer))
       (cffi:defcfun ("csoundSetPlayopenCallback"
                      csound-set-playopen-callback-1)
                     :void
                     (anonymous4719 :pointer)
                     (playopen-- :pointer))
       (cffi:defcfun ("csoundSetYieldCallback" csound-set-yield-callback-1)
                     :void
                     (anonymous4720 :pointer)
                     (yield-callback- :pointer))
       (cffi:defcfun ("csoundGetLibrarySymbol" csound-get-library-symbol)
                     :pointer
                     (library :pointer)
                     (symbol-name :pointer))
       (cffi:defcfun ("csoundCloseLibrary" csound-close-library)
                     :int
                     (library :pointer))
       (cffi:defcfun ("csoundOpenLibrary" csound-open-library)
                     :int
                     (library :pointer)
                     (library-path :pointer))
       (cffi:defcfun ("csoundAppendOpcode" csound-append-opcode-1)
                     :int
                     (anonymous4721 :pointer)
                     (opname :pointer)
                     (dsblksiz :int)
                     (thread :int)
                     (outypes :pointer)
                     (intypes :pointer)
                     (iopadr :pointer)
                     (kopadr :pointer)
                     (aopadr :pointer))
       (cffi:defcfun ("csoundDisposeOpcodeList" csound-dispose-opcode-list-1)
                     :void
                     (anonymous4722 :pointer)
                     (opcodelist :pointer))
       (cffi:defcfun ("csoundNewOpcodeList" csound-new-opcode-list-1)
                     :int
                     (anonymous4723 :pointer)
                     (opcodelist :pointer))
       (cffi:defcfun ("csoundSetExitGraphCallback"
                      csound-set-exit-graph-callback-1)
                     :void
                     (anonymous4724 :pointer)
                     (exit-graph-callback- :pointer))
       (cffi:defcfun ("csoundSetKillXYinCallback"
                      csound-set-kill-xyin-callback-1)
                     :void
                     (anonymous4725 :pointer)
                     (kill-xyin-callback- :pointer))
       (cffi:defcfun ("csoundSetReadXYinCallback"
                      csound-set-read-xyin-callback-1)
                     :void
                     (anonymous4726 :pointer)
                     (read-xyin-callback- :pointer))
       (cffi:defcfun ("csoundSetMakeXYinCallback"
                      csound-set-make-xyin-callback-1)
                     :void
                     (anonymous4727 :pointer)
                     (make-xyin-callback- :pointer))
       (cffi:defcfun ("csoundSetKillGraphCallback"
                      csound-set-kill-graph-callback-1)
                     :void
                     (anonymous4728 :pointer)
                     (kill-graph-callback- :pointer))
       (cffi:defcfun ("csoundSetDrawGraphCallback"
                      csound-set-draw-graph-callback-1)
                     :void
                     (anonymous4729 :pointer)
                     (draw-graph-callback- :pointer))
       (cffi:defcfun ("csoundSetMakeGraphCallback"
                      csound-set-make-graph-callback-1)
                     :void
                     (anonymous4730 :pointer)
                     (make-graph-callback- :pointer))
       (cffi:defcfun ("csoundSetIsGraphable" csound-set-is-graphable-1)
                     :int
                     (anonymous4731 :pointer)
                     (is-graphable :int))
       (cffi:defcfun ("csoundSetExternalMidiErrorStringCallback"
                      csound-set-external-midi-error-string-callback-1)
                     :void
                     (anonymous4732 :pointer)
                     (func :pointer))
       (cffi:defcfun ("csoundSetExternalMidiOutCloseCallback"
                      csound-set-external-midi-out-close-callback-1)
                     :void
                     (anonymous4733 :pointer)
                     (func :pointer))
       (cffi:defcfun ("csoundSetExternalMidiWriteCallback"
                      csound-set-external-midi-write-callback-1)
                     :void
                     (anonymous4734 :pointer)
                     (func :pointer))
       (cffi:defcfun ("csoundSetExternalMidiOutOpenCallback"
                      csound-set-external-midi-out-open-callback-1)
                     :void
                     (anonymous4735 :pointer)
                     (func :pointer))
       (cffi:defcfun ("csoundSetExternalMidiInCloseCallback"
                      csound-set-external-midi-in-close-callback-1)
                     :void
                     (anonymous4736 :pointer)
                     (func :pointer))
       (cffi:defcfun ("csoundSetExternalMidiReadCallback"
                      csound-set-external-midi-read-callback-1)
                     :void
                     (anonymous4737 :pointer)
                     (func :pointer))
       (cffi:defcfun ("csoundSetExternalMidiInOpenCallback"
                      csound-set-external-midi-in-open-callback-1)
                     :void
                     (anonymous4738 :pointer)
                     (func :pointer))
       (cffi:defcfun ("csoundScoreEvent" csound-score-event-1)
                     :int
                     (anonymous4739 :pointer)
                     (type :char)
                     (p-fields :pointer)
                     (num-fields :long))
       (cffi:defcfun ("csoundSetOutputValueCallback"
                      csound-set-output-value-callback-1)
                     :void
                     (anonymous4740 :pointer)
                     (output-value-calback- :pointer))
       (cffi:defcfun ("csoundSetInputValueCallback"
                      csound-set-input-value-callback-1)
                     :void
                     (anonymous4741 :pointer)
                     (input-value-calback- :pointer))
       (cffi:defcfun ("csoundKeyPress" csound-key-press-1)
                     :void
                     (anonymous4742 :pointer)
                     (c :char))
       (cffi:defcfun ("csoundInputMessage" csound-input-message-1)
                     :void
                     (anonymous4743 :pointer)
                     (message :pointer))
       (cffi:defcfun ("csoundSetMessageLevel" csound-set-message-level-1)
                     :void
                     (anonymous4744 :pointer)
                     (message-level :int))
       (cffi:defcfun ("csoundGetMessageLevel" csound-get-message-level-1)
                     :int
                     (anonymous4745 :pointer))
       (cffi:defcfun ("csoundSetMessageCallback" csound-set-message-callback-1)
                     :void
                     (anonymous4746 :pointer)
